--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple Liker</title>
   </head>
   <body>
-    <div id="modal">
+    <div id="modal" class="hidden">
       <h2>Error!</h2>
       <p id="modal-message"></p>
     </div>
@@ -67,7 +67,7 @@
       <p>Practice your Elixr!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like ">Like! <span class="like-glyph ">&#x2661;</span></li>
         </ul>
       </footer>
     </article>
